part-2/log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: exercises
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-files
          emptyDir: {}
      containers:
        - name: log-output-writer
          image: <DOCKERHUB_USER>/log-output-writer:2.0
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/files
        - name: log-output-reader
          image: <DOCKERHUB_USER>/log-output-reader:2.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/files
